--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
  <div class="pop-up-wrapper-1 d-flex">
     <p class="pop-up-content d-flex align-content-center">
       <span class="d-flex align-content-center">
-        Please note that these offers are only available until 14th of February 2023.
+        Please note that these offers are only available until 28th of February 2023.
       </span>
       <button id="close-1">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16">
@@ -241,91 +241,90 @@
            <!-- Swiper -->
       <div class="product-item">
             <div  class="item-block-grid item-block-grid-1">
-                 <img class="product-img reset-height" src="./products/image 7.png" alt="">
+                 <img class="product-img reset-height" src="./products/image 28.png" alt="">
             </div>
             <div class="item-block-grid item-block-grid-2">
-              Lamp Fitting - LED Wall Mount
+              Sink mixer single lever
             </div>
-            <div class="item-block-grid item-block-grid-3">R399.00
+            <div class="item-block-grid item-block-grid-3">R299.99
             </div>
       </div>
       <div class="product-item">
             <div class="item-block-grid item-block-grid-1">
-          <img class="product-img reset-height" src="./products/image 8.png" alt="">
+          <img class="product-img reset-height" src="./products/image 29.png" alt="">
             </div>
-             <div class="item-block-grid item-block-grid-2">Dust Mask - Disposable</div>
-            <div class="item-block-grid item-block-grid-3">R20.00
+             <div class="item-block-grid item-block-grid-2">Basin mixer single lever</div>
+            <div class="item-block-grid item-block-grid-3">R319.99
             </div>
       </div>
       
-      <div class="product-item">
+      <!-- <div class="product-item">
             <div class="item-block-grid item-block-grid-1">
-          <img class="product-img" src="./products/image 9.png" alt="">
+          <img class="product-img" src="./products/image 29.png" alt="">
             </div>
             <div class="item-block-grid item-block-grid-2">
-              Fan Pedestal - 400mm 16ln
+              Toilet seat white
             </div>
-            <div class="item-block-grid item-block-grid-3">R699.00
+            <div class="item-block-grid item-block-grid-3">R199.99
               </div>
-      </div>
+      </div> -->
       <div class="product-item">
             <div class="item-block-grid item-block-grid-1">
-          <img class="product-img" src="./products/image 10.png" alt="">
+          <img class="product-img" src="./products/image 30.png" alt="">
             </div>
             <div class="item-block-grid item-block-grid-2">
-             Floodlight - Multi Solar Kit
+              Toilet seat white
             </div>
-            <div class="item-block-grid item-block-grid-3">R549.99
+            <div class="item-block-grid item-block-grid-3">R199.99
               </div>
       </div>
 
 </div>
-
 
 
 <div class="product-row">
 
 <div class="product-item">
       <div class="item-block-grid item-block-grid-1">
-          <img class="product-img" src="./products/image 11.png" alt="">
+          <img class="product-img" src="./products/image 31.png" alt="">
       </div>
       <div class="item-block-grid item-block-grid-2">
-        Sink Mixer - C.P Wall Type
+        universal undercoat white 5l
+      </div>
+      <div class="item-block-grid item-block-grid-3">R499.99
+        </div>
+</div>
+<div class="product-item">
+      <div class="item-block-grid item-block-grid-1">
+        <img class="product-img reset-height" src="./products/image 32.png" alt="">
+      </div>
+      <div class="item-block-grid item-block-grid-2">
+        wall & ceiling white 20l
+      </div>
+      <div class="item-block-grid item-block-grid-3">R849.00
+        </div>
+</div>
+
+<div class="product-item">
+      <div class="item-block-grid item-block-grid-1">
+          <img class="product-img" src="./products/image 33.png" alt="">
+      </div>
+      <div class="item-block-grid item-block-grid-2">
+        Floodlight solar kit 20w led
       </div>
       <div class="item-block-grid item-block-grid-3">R549.99
         </div>
 </div>
-<div class="product-item">
-      <div class="item-block-grid item-block-grid-1">
-        <img class="product-img reset-height" src="./products/image 13.png" alt="">
-      </div>
-      <div class="item-block-grid item-block-grid-2">
-        Toilet Suite - CC Front Flush Nandi Wash Down
-      </div>
-      <div class="item-block-grid item-block-grid-3">R1199.00
-        </div>
-</div>
 
 <div class="product-item">
       <div class="item-block-grid item-block-grid-1">
-          <img class="product-img" src="./products/image 14.png" alt="">
+          <img class="product-img" src="./products/image 34.png" alt="">
       </div>
       <div class="item-block-grid item-block-grid-2">
-        Duralux Toilet Seat
-      </div>
-      <div class="item-block-grid item-block-grid-3">R199.99
-        </div>
-</div>
-
-<div class="product-item">
-      <div class="item-block-grid item-block-grid-1">
-          <img class="product-img" src="./products/image 15.png" alt="">
-      </div>
-      <div class="item-block-grid item-block-grid-2">
-        Hardboard Door - 2032 x 813
+        switch socket dbl 4 x 4
       </div>
       <div class="item-block-grid item-block-grid-3">
-        R269.99
+        R65.00
       </div>
 </div>
 
@@ -336,36 +335,36 @@
      <!-- Swiper -->
 <div class="product-item">
       <div class="item-block-grid item-block-grid-1">
-          <img class="product-img" src="./products/image 16.png" alt="">
+          <img class="product-img" src="./products/image 35.png" alt="">
       </div>
       <div class="item-block-grid item-block-grid-2">
-       Basin Mixer Ntombi
+       lamp led 6w recharge b22
       </div>
       <div class="item-block-grid item-block-grid-3">
-        R699.99
+        R65.00
       </div>
 </div>
 <div class="product-item">
       <div class="item-block-grid item-block-grid-1">
-          <img class="product-img" src="./products/image 17.png" alt="">
+          <img class="product-img" src="./products/image 36.png" alt="">
       </div>
       <div class="item-block-grid item-block-grid-2">
-      Spade Digging - Steel Shaft
+      lamp led 6w recharge e27
       </div>
       <div class="item-block-grid item-block-grid-3">
-        R164.99
+        R65.00
       </div>
 </div>
 
 <div class="product-item">
      <div class="item-block-grid item-block-grid-1">
-         <img class="product-img" src="./products/image 18.png" alt="">
+         <img class="product-img" src="./products/image 37.png" alt="">
      </div>
      <div class="item-block-grid item-block-grid-2">
-     Solvent Pool Acid 5Lt
+     Gallery & bowl set 60w 150mm
      </div>
      <div class="item-block-grid item-block-grid-3">
-      R109.99
+      R49.99
      </div>
 
 </div>
@@ -464,10 +463,10 @@
       <img class="product-img" src="./products/image 26.png" alt="">
   </div>
   <div class="item-block-grid item-block-grid-2">
-    Aluminium Ladder - 6 Step Medium Duty
+    ater Pump 0.55kw,with suction hose kit QWEs
    </div>
    <div class="item-block-grid item-block-grid-3">
-     R999.99
+     R2799.99
    </div>
 </div>
 
@@ -476,10 +475,10 @@
       <img class="product-img" src="./products/image 27.png" alt="">
   </div>
   <div class="item-block-grid item-block-grid-2">
-    Apollo Pillar Tap - 15mm C.P Pair
+    Pump cover protection booster
   </div>
   <div class="item-block-grid item-block-grid-3">
-    R339.00
+    R459.99
   </div>
 </div>
 
@@ -504,7 +503,7 @@
     <div class="pop-up-wrapper d-flex">
       <p class="pop-up-content d-flex align-content-center">
         <span class="d-flex align-content-center">
-          Please note that these offers are only available until 14th of February 2023.
+          Please note that these offers are only available until 28th of February 2023.
           <!-- from the 1st to the 28th of -->
         </span>
         <button id="close-2">
