--- a/index.html
+++ b/index.html
@@ -258,16 +258,16 @@
             </div>
       </div>
       
-      <!-- <div class="product-item">
+      <div class="product-item">
             <div class="item-block-grid item-block-grid-1">
-          <img class="product-img" src="./products/image 29.png" alt="">
+          <img class="product-img" src="./products/image13.png" alt="">
             </div>
             <div class="item-block-grid item-block-grid-2">
-              Toilet seat white
+              Toilet suite cc front flush nandi wash down
             </div>
-            <div class="item-block-grid item-block-grid-3">R199.99
+            <div class="item-block-grid item-block-grid-3">R1199.99
               </div>
-      </div> -->
+      </div>
       <div class="product-item">
             <div class="item-block-grid item-block-grid-1">
           <img class="product-img" src="./products/image 30.png" alt="">
