--- a/index.html
+++ b/index.html
@@ -241,41 +241,41 @@
            <!-- Swiper -->
       <div class="product-item">
             <div  class="item-block-grid item-block-grid-1">
-                 <img class="product-img reset-height" src="./products/image 28.png" alt="">
+                 <img class="product-img reset-height" src="./products/image 1.png" alt="">
             </div>
             <div class="item-block-grid item-block-grid-2">
-              Sink mixer single lever
+              Kwikot Geyser - Superline 150Lt
             </div>
-            <div class="item-block-grid item-block-grid-3">R299.99
+            <div class="item-block-grid item-block-grid-3">R4799.00
             </div>
       </div>
       <div class="product-item">
             <div class="item-block-grid item-block-grid-1">
-          <img class="product-img reset-height" src="./products/image 29.png" alt="">
+          <img class="product-img reset-height" src="./products/image 2.png" alt="">
             </div>
-             <div class="item-block-grid item-block-grid-2">Basin mixer single lever</div>
-            <div class="item-block-grid item-block-grid-3">R319.99
+             <div class="item-block-grid item-block-grid-2">Toilet Seat - Melamine Wood White</div>
+            <div class="item-block-grid item-block-grid-3">R379.99
             </div>
       </div>
       
       <div class="product-item">
             <div class="item-block-grid item-block-grid-1">
-          <img class="product-img" src="./products/image13.png" alt="">
+          <img class="product-img" src="./products/image 3.png" alt="">
             </div>
             <div class="item-block-grid item-block-grid-2">
-              Toilet suite cc front flush nandi wash down
+              Basin & Pedestal - White
             </div>
-            <div class="item-block-grid item-block-grid-3">R1199.99
+            <div class="item-block-grid item-block-grid-3">R799.99
               </div>
       </div>
       <div class="product-item">
             <div class="item-block-grid item-block-grid-1">
-          <img class="product-img" src="./products/image 30.png" alt="">
+          <img class="product-img" src="./products/image 4.png" alt="">
             </div>
             <div class="item-block-grid item-block-grid-2">
-              Toilet seat white
+              Drill Driver - 20V 10mm 35nm 2.0Ah Std Charg 44 PCS
             </div>
-            <div class="item-block-grid item-block-grid-3">R199.99
+            <div class="item-block-grid item-block-grid-3">R1699.00
               </div>
       </div>
 
@@ -286,45 +286,45 @@
 
 <div class="product-item">
       <div class="item-block-grid item-block-grid-1">
-          <img class="product-img" src="./products/image 31.png" alt="">
+          <img class="product-img" src="./products/image 5.png" alt="">
       </div>
       <div class="item-block-grid item-block-grid-2">
-        universal undercoat white 5l
+        LED Rechargeable Lamp - 4W C/W
       </div>
-      <div class="item-block-grid item-block-grid-3">R499.99
+      <div class="item-block-grid item-block-grid-3">R79.99
         </div>
 </div>
 <div class="product-item">
       <div class="item-block-grid item-block-grid-1">
-        <img class="product-img reset-height" src="./products/image 32.png" alt="">
+        <img class="product-img reset-height" src="./products/image 6.png" alt="">
       </div>
       <div class="item-block-grid item-block-grid-2">
-        wall & ceiling white 20l
+        Mat Extension Real - 20mx1.0 Dbl Plug
       </div>
-      <div class="item-block-grid item-block-grid-3">R849.00
-        </div>
-</div>
-
-<div class="product-item">
-      <div class="item-block-grid item-block-grid-1">
-          <img class="product-img" src="./products/image 33.png" alt="">
-      </div>
-      <div class="item-block-grid item-block-grid-2">
-        Floodlight solar kit 20w led
-      </div>
-      <div class="item-block-grid item-block-grid-3">R549.99
+      <div class="item-block-grid item-block-grid-3">R999.90
         </div>
 </div>
 
 <div class="product-item">
       <div class="item-block-grid item-block-grid-1">
-          <img class="product-img" src="./products/image 34.png" alt="">
+          <img class="product-img" src="./products/image 7.png" alt="">
       </div>
       <div class="item-block-grid item-block-grid-2">
-        switch socket dbl 4 x 4
+        Aluminium Ladder - Extension 14.3Kg
+      </div>
+      <div class="item-block-grid item-block-grid-3">R2099.99
+        </div>
+</div>
+
+<div class="product-item">
+      <div class="item-block-grid item-block-grid-1">
+          <img class="product-img" src="./products/image 8.png" alt="">
+      </div>
+      <div class="item-block-grid item-block-grid-2">
+        Aluminium Ladder - Multi Purpose 1.7-3.8m
       </div>
       <div class="item-block-grid item-block-grid-3">
-        R65.00
+        R1549.00
       </div>
 </div>
 
@@ -335,48 +335,49 @@
      <!-- Swiper -->
 <div class="product-item">
       <div class="item-block-grid item-block-grid-1">
-          <img class="product-img" src="./products/image 35.png" alt="">
+          <img class="product-img" src="./products/image 9.png" alt="">
       </div>
       <div class="item-block-grid item-block-grid-2">
-       lamp led 6w recharge b22
+        Aluminium Ladder - 6 Step Medium Duty
       </div>
       <div class="item-block-grid item-block-grid-3">
-        R65.00
+        R999.99
       </div>
 </div>
 <div class="product-item">
       <div class="item-block-grid item-block-grid-1">
-          <img class="product-img" src="./products/image 36.png" alt="">
+          <img class="product-img" src="./products/image 10.png" alt="">
       </div>
       <div class="item-block-grid item-block-grid-2">
-      lamp led 6w recharge e27
+        Build it Standard Gloss Enamel - 5Lt White
       </div>
       <div class="item-block-grid item-block-grid-3">
-        R65.00
+        R279.99
       </div>
 </div>
 
 <div class="product-item">
      <div class="item-block-grid item-block-grid-1">
-         <img class="product-img" src="./products/image 37.png" alt="">
+         <img class="product-img" src="./products/image 11.png" alt="">
      </div>
      <div class="item-block-grid item-block-grid-2">
-     Gallery & bowl set 60w 150mm
+      Build it Roofproof Kit - 5Lt
      </div>
      <div class="item-block-grid item-block-grid-3">
-      R49.99
+      R169.99
      </div>
 
 </div>
 <div class="product-item">
      <div class="item-block-grid item-block-grid-1">
-         <img class="product-img" src="./products/image 19.png" alt="">
+         <img class="product-img" src="./products/image 13.png" alt="">
      </div>
      <div class="item-block-grid item-block-grid-2">
-     Efekto Roundup - 1Lt Ready to Use
+      Build it Wall & Ceiling - 20Lt White
+
    </div>
    <div class="item-block-grid item-block-grid-3">
-     R319.99
+     R799.99
    </div>
 </div>
 </div>
@@ -388,49 +389,47 @@
        <img class="product-img" src="./products/image 20.png" alt="">
    </div>
     <div class="item-block-grid item-block-grid-2">
-     Paint Brush - Aqua 3 Pack
+      Drum Poly - 25Lt
      </div>
      <div class="item-block-grid item-block-grid-3">
-      R44.99
+      R159.99
      </div>
 
 </div>
 <div class="product-item">
   <div class="item-block-grid item-block-grid-1">
-      <img class="product-img" src="./products/image 21.png" alt="">
+      <img class="product-img" src="./products/image 15.png" alt="">
   </div>
   <div class="item-block-grid item-block-grid-2">
-    DP Crack Fill - White 10kg
+    Fan Pedestal - 400mm 16In
   </div>
   <div class="item-block-grid item-block-grid-3">
-    R209.99
+    R699.00
   </div>
 </div>
 
 <div class="product-item">
   <div class="item-block-grid item-block-grid-1">
-      <img class="product-img" src="./products/image 22.png" alt="">
+      <img class="product-img" src="./products/image 16.png" alt="">
   </div>
   <div class="item-block-grid item-block-grid-2">
-   Gas Cartrdige - Lamp Piezzo Ignition
+    Totai Gas Stove - Portable Cartridge
   </div>
   <div class="item-block-grid item-block-grid-3">
-    R379.99
+    R499.00
   </div>
 </div>
 
 <div class="product-item">
   <div class="item-block-grid item-block-grid-1">
-      <img class="product-img" src="./products/image 23.png" alt="">
+      <img class="product-img" src="./products/image 17.png" alt="">
   </div>
   <div class="item-block-grid item-block-grid-2">
-    Drill Driver - 20V 10mm 35nm 2.0Ah STD charger 44 Piece
+    LED Rechargeable Lamp - 6W E27/B22
   </div>
   <div class="item-block-grid item-block-grid-3">
-    R1699.00
+    R54.99
   </div>
-
-
 </div>
 
 <div class="product-row">
@@ -439,7 +438,7 @@
         <img class="product-img" src="./products/image 24.png" alt="">
     </div>
     <div class="item-block-grid item-block-grid-2">
-      Sinewave Inverter - 1440W 2400kva
+      SINEWAVE INVERTER - 1440W 2400KVA
     </div>
     <div class="item-block-grid item-block-grid-3">
       R13999.99
@@ -451,11 +450,11 @@
       <img class="product-img" src="./products/image 25.png" alt="">
   </div>
   <div class="item-block-grid item-block-grid-2">
-    Aluminium Ladder - Wonder Multi Purpose
-  </div>
-  <div class="item-block-grid item-block-grid-3">
+    ALUMINIUM LADDER - WONDER MULTI PURPOSE
+   </div>
+   <div class="item-block-grid item-block-grid-3">
     R1599.99
-  </div>
+   </div>
 </div> 
 
 <div class="product-item">
@@ -463,11 +462,11 @@
       <img class="product-img" src="./products/image 26.png" alt="">
   </div>
   <div class="item-block-grid item-block-grid-2">
-    ater Pump 0.55kw,with suction hose kit QWEs
-   </div>
-   <div class="item-block-grid item-block-grid-3">
-     R2799.99
-   </div>
+    ATER PUMP - 0.55KW,WITH SUCTION HOSE KIT QWES
+  </div>
+  <div class="item-block-grid item-block-grid-3">
+    R2799.99
+  </div>
 </div>
 
 <div class="product-item">
@@ -512,7 +511,7 @@
           </svg>
       </button>
       </p>
-    </div> 
+    </div>
     <!-- <br> -->
     <footer>
      <br>
