--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
  <div class="pop-up-wrapper-1 d-flex">
     <p class="pop-up-content d-flex align-content-center">
       <span class="d-flex align-content-center">
-        Please note that these offers are only available from the 11th April until 12th May 2023.
+        Please note that these offers are only available from the 15th May until 17th June 2023.
       </span>
       <button id="close-1">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16">
@@ -245,17 +245,17 @@
                  <img class="product-img reset-height" src="./products/image 1.png" alt="">
             </div>
             <div class="item-block-grid item-block-grid-2">
-              Kwikot Geyser - Superline 150Lt
+              Aluminium Door - Hinged Valencia Solid
             </div>
-            <div class="item-block-grid item-block-grid-3">R4799.00
+            <div class="item-block-grid item-block-grid-3">R6399.00
             </div>
       </div>
       <div class="product-item">
             <div class="item-block-grid item-block-grid-1">
           <img class="product-img reset-height" src="./products/image 2.png" alt="">
             </div>
-             <div class="item-block-grid item-block-grid-2">Toilet Seat - Melamine Wood White</div>
-            <div class="item-block-grid item-block-grid-3">R379.99
+             <div class="item-block-grid item-block-grid-2">Aluminium Window - PTT1512 Bronze Clear</div>
+            <div class="item-block-grid item-block-grid-3">R1299.00
             </div>
       </div>
       
@@ -264,9 +264,9 @@
           <img class="product-img" src="./products/image 3.png" alt="">
             </div>
             <div class="item-block-grid item-block-grid-2">
-              Basin & Pedestal - White
+              Aluminium Window - PT69 Bronze OBS
             </div>
-            <div class="item-block-grid item-block-grid-3">R799.99
+            <div class="item-block-grid item-block-grid-3">R649.99
               </div>
       </div>
       <div class="product-item">
@@ -274,9 +274,9 @@
           <img class="product-img" src="./products/image 4.png" alt="">
             </div>
             <div class="item-block-grid item-block-grid-2">
-              Drill Driver - 20V 10mm 35nm 2.0Ah Std Charg 44 PCS
+              Aluminium Window - PT129 Bronze Clear
             </div>
-            <div class="item-block-grid item-block-grid-3">R1699.00
+            <div class="item-block-grid item-block-grid-3">R849.99
               </div>
       </div>
 
@@ -290,9 +290,9 @@
           <img class="product-img" src="./products/image 5.png" alt="">
       </div>
       <div class="item-block-grid item-block-grid-2">
-        LED Rechargeable Lamp - 4W C/W
+        Floodlight Solar Kit - 20W LED
       </div>
-      <div class="item-block-grid item-block-grid-3">R79.99
+      <div class="item-block-grid item-block-grid-3">R499.00
         </div>
 </div>
 <div class="product-item">
@@ -300,9 +300,9 @@
         <img class="product-img reset-height" src="./products/image 6.png" alt="">
       </div>
       <div class="item-block-grid item-block-grid-2">
-        Mat Extension Real - 20mx1.0 Dbl Plug
+        Gas Heater - DK1001
       </div>
-      <div class="item-block-grid item-block-grid-3">R999.90
+      <div class="item-block-grid item-block-grid-3">R1399.00
         </div>
 </div>
 
@@ -311,9 +311,9 @@
           <img class="product-img" src="./products/image 7.png" alt="">
       </div>
       <div class="item-block-grid item-block-grid-2">
-        Aluminium Ladder - Extension 14.3Kg
+        Lamp Solar Garden Spike - Mini Tube 359mm
       </div>
-      <div class="item-block-grid item-block-grid-3">R2099.99
+      <div class="item-block-grid item-block-grid-3">R74.99
         </div>
 </div>
 
@@ -322,10 +322,10 @@
           <img class="product-img" src="./products/image 8.png" alt="">
       </div>
       <div class="item-block-grid item-block-grid-2">
-        Aluminium Ladder - Multi Purpose 1.7-3.8m
+        Lamp Solar Garden Spike - S/Chrome 120mm 4 Piece
       </div>
       <div class="item-block-grid item-block-grid-3">
-        R1549.00
+        R359.99
       </div>
 </div>
 
@@ -339,10 +339,10 @@
           <img class="product-img" src="./products/image 9.png" alt="">
       </div>
       <div class="item-block-grid item-block-grid-2">
-        Aluminium Ladder - 6 Step Medium Duty
+        Light Spot LED - Hands Free
       </div>
       <div class="item-block-grid item-block-grid-3">
-        R999.99
+        R129.99
       </div>
 </div>
 <div class="product-item">
@@ -350,10 +350,10 @@
           <img class="product-img" src="./products/image 10.png" alt="">
       </div>
       <div class="item-block-grid item-block-grid-2">
-        Build it Standard Gloss Enamel - 5Lt White
+        Build it RoofProof Kit - 5Lt Black
       </div>
       <div class="item-block-grid item-block-grid-3">
-        R279.99
+        R199.99
       </div>
 </div>
 
@@ -362,23 +362,24 @@
          <img class="product-img" src="./products/image 11.png" alt="">
      </div>
      <div class="item-block-grid item-block-grid-2">
-      Build it Roofproof Kit - 5Lt
-     </div>
-     <div class="item-block-grid item-block-grid-3">
-      R169.99
-     </div>
+      Mechanic Cantilever Tool Box - 6 x Tray 470 x 220 x 230mm
 
+   </div>
+   <div class="item-block-grid item-block-grid-3">
+     R4499.00
+   </div>
 </div>
+
 <div class="product-item">
      <div class="item-block-grid item-block-grid-1">
          <img class="product-img" src="./products/image 13.png" alt="">
      </div>
      <div class="item-block-grid item-block-grid-2">
-      Build it Wall & Ceiling - 20Lt White
+      Tjhoko Paint - 250ml
 
    </div>
    <div class="item-block-grid item-block-grid-3">
-     R799.99
+     R1299.99
    </div>
 </div>
 </div>
@@ -387,13 +388,13 @@
   <!-- Swiper -->
 <div class="product-item">
    <div class="item-block-grid item-block-grid-1">
-       <img class="product-img" src="./products/image 20.png" alt="">
+       <img class="product-img" src="./products/image 12.png" alt="">
    </div>
     <div class="item-block-grid item-block-grid-2">
-      Drum Poly - 25Lt
+      Tal Tilebond - 20Lt
      </div>
      <div class="item-block-grid item-block-grid-3">
-      R159.99
+      R599.00
      </div>
 
 </div>
@@ -402,10 +403,10 @@
       <img class="product-img" src="./products/image 15.png" alt="">
   </div>
   <div class="item-block-grid item-block-grid-2">
-    Fan Pedestal - 400mm 16In
+    USB Flashlight - Rechargeable 
   </div>
   <div class="item-block-grid item-block-grid-3">
-    R699.00
+    R149.99
   </div>
 </div>
 
@@ -414,10 +415,10 @@
       <img class="product-img" src="./products/image 16.png" alt="">
   </div>
   <div class="item-block-grid item-block-grid-2">
-    Totai Gas Stove - Portable Cartridge
+    Vacuum Electric Hot ASh - Stainless Steel 1000W
   </div>
   <div class="item-block-grid item-block-grid-3">
-    R499.00
+    R999.99
   </div>
 </div>
 
@@ -426,23 +427,23 @@
       <img class="product-img" src="./products/image 17.png" alt="">
   </div>
   <div class="item-block-grid item-block-grid-2">
-    LED Rechargeable Lamp - 6W E27/B22
+    Worklight AA Battery - 600 Lumens
   </div>
   <div class="item-block-grid item-block-grid-3">
-    R54.99
+    R199.99
   </div>
 </div>
 
 <div class="product-row">
   <div class="product-item">
     <div class="item-block-grid item-block-grid-1">
-        <img class="product-img" src="./products/image 24.png" alt="">
+        <img class="product-img" src="./products/image 14.png" alt="">
     </div>
     <div class="item-block-grid item-block-grid-2">
-      SINEWAVE INVERTER - 1440W 2400KVA
+      Total Heat Gun + Nozzles - 2000W
     </div>
     <div class="item-block-grid item-block-grid-3">
-      R13999.99
+      R599.99
     </div>
 </div> 
 
@@ -503,7 +504,7 @@
     <div class="pop-up-wrapper d-flex">
       <p class="pop-up-content d-flex align-content-center">
         <span class="d-flex align-content-center">
-          Please note that these offers are only available from the 11th April until 12th May 2023.
+          Please note that these offers are only available from the 15th May until 17th June 2023.
           <!-- from the 1st to the 28th of -->
         </span>
         <button id="close-2">
