made changes on date

--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
 
    </div>
    <div class="item-block-grid item-block-grid-3">
-     R1299.99
+     R129.99
    </div>
 </div>
 </div>
@@ -415,7 +415,7 @@
       <img class="product-img" src="./products/image 16.png" alt="">
   </div>
   <div class="item-block-grid item-block-grid-2">
-    Vacuum Electric Hot ASh - Stainless Steel 1000W
+   Hot ASh Electric Vacuum With Stainless Steel 1000W
   </div>
   <div class="item-block-grid item-block-grid-3">
     R999.99
@@ -427,10 +427,10 @@
       <img class="product-img" src="./products/image 17.png" alt="">
   </div>
   <div class="item-block-grid item-block-grid-2">
-    Worklight AA Battery - 600 Lumens
+    Battery operated worklight - 600 Lumens
   </div>
   <div class="item-block-grid item-block-grid-3">
-    R199.99
+    R129.99
   </div>
 </div>
 
