I did the promotion newspaper update

--- a/basic/index.html
+++ b/basic/index.html
@@ -17,14 +17,14 @@
 <div class="flipbook-viewport">
 	<div class="container">
 		<div class="flipbook">
-			<div style="background-image:url(../flip-images/SR694_1.jpg)"></div>
-			 <div style="background-image:url(../flip-images/SR694_2.jpg)"></div>
-			<div style="background-image:url(../flip-images/SR694_3.jpg)"></div>
-			<div style="background-image:url(../flip-images/SR694_4.jpg)"></div>
-			<div style="background-image:url(../flip-images/SR694_5.jpg)"></div>
-			<div style="background-image:url(../flip-images/SR694_6.jpg)"></div>
-			<div style="background-image:url(../flip-images/SR694_7.jpg)"></div>
-			<div style="background-image:url(../flip-images/SR694_8.jpg)"></div>
+			<div style="background-image:url(../flip-images/SR811_1.jpg)"></div>
+			 <div style="background-image:url(../flip-images/SR811_2.jpg)"></div>
+			<div style="background-image:url(../flip-images/SR811_3.jpg)"></div>
+			<div style="background-image:url(../flip-images/SR811_5.jpg)"></div>
+			<div style="background-image:url(../flip-images/SR811_6.jpg)"></div>
+			<div style="background-image:url(../flip-images/SR811_8.jpg)"></div>
+			<!-- <div style="background-image:url(../flip-images/)"></div>
+			<div style="background-image:url(../flip-images/)"></div> -->
 			 <!-- <div style="background-image:url(./flip-images/9.jpg)"></div>
 			<div style="background-image:url(./flip-images/10.jpg)"></div>
 			<div style="background-image:url(./flip-images/11.jpg)"></div>
