pushing new update for surpreme

--- a/education/promotions.html
+++ b/education/promotions.html
@@ -159,33 +159,33 @@
       
 <div class="col-md-3">
         <div class="promo-child promo-child-1">
-<img class="promo-img" data-zoomable  src="./promotions/Aug_1.jpg" alt="">
+<img class="promo-img" data-zoomable  src="./promotions/SR811_1.jpg" alt="">
         </div>
     </div>
     <div class="col-md-3">
       <div class="promo-child promo-child-1">
-<img class="promo-img" data-zoomable  src="./promotions/Aug_2.jpg" alt="">
+<img class="promo-img" data-zoomable  src="./promotions/SR811_2.jpg" alt="">
       </div>
   </div>
       <div class="col-md-3">
         <div class="promo-child promo-child-1">
-<img class="promo-img" data-zoomable  src="./promotions/Aug_3.jpg" alt="">
+<img class="promo-img" data-zoomable  src="./promotions/SR811_3.jpg" alt="">
         </div>
     </div>
 <div class="col-md-3">
         <div class="promo-child promo-child-1">
-<img class="promo-img" data-zoomable  src="./promotions/Aug_5.jpg" alt="">
+<img class="promo-img" data-zoomable  src="./promotions/SR811_5.jpg" alt="">
         </div>
     </div>
     
     <div class="col-md-3">
         <div class="promo-child promo-child-1">
-<img class="promo-img" data-zoomable  src="./promotions/Aug_4.jpg" alt="">
+<img class="promo-img" data-zoomable  src="./promotions/SR811_6.jpg" alt="">
         </div>
     </div>
     <div class="col-md-3">
       <div class="promo-child promo-child-1">
-<img class="promo-img" data-zoomable  src="./promotions/Aug_4.jpg" alt="">
+<img class="promo-img" data-zoomable  src="./promotions/SR811_8.jpg" alt="">
       </div>
     </div>  
 
