--- a/index.html
+++ b/index.html
@@ -245,17 +245,17 @@
                  <img class="product-img reset-height" src="./products/image 1.png" alt="">
             </div>
             <div class="item-block-grid item-block-grid-2">
-              Aluminium Door - Hinged Valencia Solid
+             Instant Hot Water Bella Electrical Shower
             </div>
-            <div class="item-block-grid item-block-grid-3">R6399.00
+            <div class="item-block-grid item-block-grid-3">R1099.00
             </div>
       </div>
       <div class="product-item">
             <div class="item-block-grid item-block-grid-1">
           <img class="product-img reset-height" src="./products/image 2.png" alt="">
             </div>
-             <div class="item-block-grid item-block-grid-2">Aluminium Window - PTT1512 Bronze Clear</div>
-            <div class="item-block-grid item-block-grid-3">R1299.00
+             <div class="item-block-grid item-block-grid-2">Gas Geyser - 16Lt Battery Ignition</div>
+            <div class="item-block-grid item-block-grid-3">R4299.99
             </div>
       </div>
       
@@ -264,9 +264,9 @@
           <img class="product-img" src="./products/image 3.png" alt="">
             </div>
             <div class="item-block-grid item-block-grid-2">
-              Aluminium Window - PT69 Bronze OBS
+             Build it Gloss Enamel - 5Lt White
             </div>
-            <div class="item-block-grid item-block-grid-3">R649.99
+            <div class="item-block-grid item-block-grid-3">R279.99
               </div>
       </div>
       <div class="product-item">
@@ -274,9 +274,9 @@
           <img class="product-img" src="./products/image 4.png" alt="">
             </div>
             <div class="item-block-grid item-block-grid-2">
-              Aluminium Window - PT129 Bronze Clear
+              Build it Wall & Ceiling - 20Lt White
             </div>
-            <div class="item-block-grid item-block-grid-3">R849.99
+            <div class="item-block-grid item-block-grid-3">R789.99
               </div>
       </div>
 
@@ -290,9 +290,9 @@
           <img class="product-img" src="./products/image 5.png" alt="">
       </div>
       <div class="item-block-grid item-block-grid-2">
-        Floodlight Solar Kit - 20W LED
+        Build it Acr Roof Paint - 20Lt Black
       </div>
-      <div class="item-block-grid item-block-grid-3">R499.00
+      <div class="item-block-grid item-block-grid-3">R999.99
         </div>
 </div>
 <div class="product-item">
@@ -300,9 +300,9 @@
         <img class="product-img reset-height" src="./products/image 6.png" alt="">
       </div>
       <div class="item-block-grid item-block-grid-2">
-        Gas Heater - DK1001
+        Butane Cartridge - 200g
       </div>
-      <div class="item-block-grid item-block-grid-3">R1399.00
+      <div class="item-block-grid item-block-grid-3">R64.99
         </div>
 </div>
 
@@ -311,9 +311,9 @@
           <img class="product-img" src="./products/image 7.png" alt="">
       </div>
       <div class="item-block-grid item-block-grid-2">
-        Lamp Solar Garden Spike - Mini Tube 359mm
+       ALUMINIUM Window - PT129 Bronze Clear
       </div>
-      <div class="item-block-grid item-block-grid-3">R74.99
+      <div class="item-block-grid item-block-grid-3">R849.99
         </div>
 </div>
 
@@ -322,10 +322,10 @@
           <img class="product-img" src="./products/image 8.png" alt="">
       </div>
       <div class="item-block-grid item-block-grid-2">
-        Lamp Solar Garden Spike - S/Chrome 120mm 4 Piece
+       ALUMINIUM Window - PT159 Bronze Clear
       </div>
       <div class="item-block-grid item-block-grid-3">
-        R359.99
+        R949.99
       </div>
 </div>
 
@@ -339,10 +339,10 @@
           <img class="product-img" src="./products/image 9.png" alt="">
       </div>
       <div class="item-block-grid item-block-grid-2">
-        Light Spot LED - Hands Free
+        Halogen Heater - 3 Bar 1200W
       </div>
       <div class="item-block-grid item-block-grid-3">
-        R129.99
+        R524.99
       </div>
 </div>
 <div class="product-item">
@@ -350,10 +350,10 @@
           <img class="product-img" src="./products/image 10.png" alt="">
       </div>
       <div class="item-block-grid item-block-grid-2">
-        Build it RoofProof Kit - 5Lt Black
+        Heater Wall Bathroom - 2 x 600w
       </div>
       <div class="item-block-grid item-block-grid-3">
-        R199.99
+        R769.99
       </div>
 </div>
 
@@ -362,24 +362,24 @@
          <img class="product-img" src="./products/image 11.png" alt="">
      </div>
      <div class="item-block-grid item-block-grid-2">
-      Mechanic Cantilever Tool Box - 6 x Tray 470 x 220 x 230mm
+      ALUMINIUM Window - PTT1512 Bronze Clear
 
    </div>
    <div class="item-block-grid item-block-grid-3">
-     R4499.00
+     R1299.99
    </div>
 </div>
 
 <div class="product-item">
      <div class="item-block-grid item-block-grid-1">
-         <img class="product-img" src="./products/image 13.png" alt="">
+         <img class="product-img" src="./products/image 12.png" alt="">
      </div>
      <div class="item-block-grid item-block-grid-2">
-      Tjhoko Paint - 250ml
+      DK Gas Cooker Top - Chrome
 
    </div>
    <div class="item-block-grid item-block-grid-3">
-     R129.99
+     R169.99
    </div>
 </div>
 </div>
@@ -388,37 +388,37 @@
   <!-- Swiper -->
 <div class="product-item">
    <div class="item-block-grid item-block-grid-1">
-       <img class="product-img" src="./products/image 12.png" alt="">
+       <img class="product-img" src="./products/image 13.png" alt="">
    </div>
     <div class="item-block-grid item-block-grid-2">
-      Tal Tilebond - 20Lt
+      Dk Gas Parabolic Heater
      </div>
      <div class="item-block-grid item-block-grid-3">
-      R599.00
+      R339.99
      </div>
 
 </div>
+<div class="product-item">
+  <div class="item-block-grid item-block-grid-1">
+      <img class="product-img" src="./products/image 14.png" alt="">
+  </div>
+  <div class="item-block-grid item-block-grid-2">
+    Totai Gas Cylinder - 3kg
+  </div>
+  <div class="item-block-grid item-block-grid-3">
+    R599.99
+  </div>
+</div>
+
 <div class="product-item">
   <div class="item-block-grid item-block-grid-1">
       <img class="product-img" src="./products/image 15.png" alt="">
   </div>
   <div class="item-block-grid item-block-grid-2">
-    USB Flashlight - Rechargeable 
+   Totai Gas Stove - Portable Cartridge
   </div>
   <div class="item-block-grid item-block-grid-3">
-    R149.99
-  </div>
-</div>
-
-<div class="product-item">
-  <div class="item-block-grid item-block-grid-1">
-      <img class="product-img" src="./products/image 16.png" alt="">
-  </div>
-  <div class="item-block-grid item-block-grid-2">
-   Hot ASh Electric Vacuum With Stainless Steel 1000W
-  </div>
-  <div class="item-block-grid item-block-grid-3">
-    R999.99
+    R399.99
   </div>
 </div>
 
@@ -464,10 +464,10 @@
       <img class="product-img" src="./products/image 26.png" alt="">
   </div>
   <div class="item-block-grid item-block-grid-2">
-    ATER PUMP - 0.55KW,WITH SUCTION HOSE KIT QWES
+    USB Flashlight - Rechargeable 
   </div>
   <div class="item-block-grid item-block-grid-3">
-    R2799.99
+    R149.99
   </div>
 </div>
 
@@ -476,12 +476,12 @@
       <img class="product-img" src="./products/image 27.png" alt="">
   </div>
   <div class="item-block-grid item-block-grid-2">
-    Pump cover protection booster
+    Total Heat Gun + Nozzles - 2000W
   </div>
   <div class="item-block-grid item-block-grid-3">
-    R459.99
+    R599.99
   </div>
-</div>
+</div> 
 
 <!-- <div class="product-item">
   <div class="item-block-grid item-block-grid-1">
