--- a/index.html
+++ b/index.html
@@ -242,41 +242,41 @@
            <!-- Swiper -->
       <div class="product-item">
             <div  class="item-block-grid item-block-grid-1">
-                 <img class="product-img reset-height" src="./products/image 1.png" alt="">
+                 <img class="product-img reset-height" src="./products/image 17.png" alt="">
             </div>
             <div class="item-block-grid item-block-grid-2">
-             Instant Hot Water Bella Electrical Shower
+              Tray set - All in one
             </div>
-            <div class="item-block-grid item-block-grid-3">R1099.00
+            <div class="item-block-grid item-block-grid-3">R139.99 each
             </div>
       </div>
       <div class="product-item">
             <div class="item-block-grid item-block-grid-1">
-          <img class="product-img reset-height" src="./products/image 2.png" alt="">
+          <img class="product-img reset-height" src="./products/image 20.png" alt="">
             </div>
-             <div class="item-block-grid item-block-grid-2">Gas Geyser - 16Lt Battery Ignition</div>
-            <div class="item-block-grid item-block-grid-3">R4299.99
+             <div class="item-block-grid item-block-grid-2">Paint Brush - 3 Pack</div>
+            <div class="item-block-grid item-block-grid-3">R44.99
             </div>
       </div>
       
       <div class="product-item">
             <div class="item-block-grid item-block-grid-1">
-          <img class="product-img" src="./products/image 3.png" alt="">
+          <img class="product-img" src="./products/image 21.png" alt="">
             </div>
             <div class="item-block-grid item-block-grid-2">
-             Build it Gloss Enamel - 5Lt White
+             Electrical Shower - Instance Hot Water
             </div>
-            <div class="item-block-grid item-block-grid-3">R279.99
+            <div class="item-block-grid item-block-grid-3">R1099.00
               </div>
       </div>
       <div class="product-item">
             <div class="item-block-grid item-block-grid-1">
-          <img class="product-img" src="./products/image 4.png" alt="">
+          <img class="product-img" src="./products/image 22.png" alt="">
             </div>
             <div class="item-block-grid item-block-grid-2">
-              Build it Wall & Ceiling - 20Lt White
+              Gas Geyser - 20Lt Bettery Ignition
             </div>
-            <div class="item-block-grid item-block-grid-3">R789.99
+            <div class="item-block-grid item-block-grid-3">R6199.99
               </div>
       </div>
 
@@ -287,7 +287,7 @@
 
 <div class="product-item">
       <div class="item-block-grid item-block-grid-1">
-          <img class="product-img" src="./products/image 5.png" alt="">
+          <img class="product-img" src="./products/image 23.png" alt="">
       </div>
       <div class="item-block-grid item-block-grid-2">
         Build it Acr Roof Paint - 20Lt Black
@@ -297,7 +297,7 @@
 </div>
 <div class="product-item">
       <div class="item-block-grid item-block-grid-1">
-        <img class="product-img reset-height" src="./products/image 6.png" alt="">
+        <img class="product-img reset-height" src="./products/image 24.png" alt="">
       </div>
       <div class="item-block-grid item-block-grid-2">
         Butane Cartridge - 200g
@@ -308,7 +308,7 @@
 
 <div class="product-item">
       <div class="item-block-grid item-block-grid-1">
-          <img class="product-img" src="./products/image 7.png" alt="">
+          <img class="product-img" src="./products/image 25.png" alt="">
       </div>
       <div class="item-block-grid item-block-grid-2">
        ALUMINIUM Window - PT129 Bronze Clear
@@ -319,7 +319,7 @@
 
 <div class="product-item">
       <div class="item-block-grid item-block-grid-1">
-          <img class="product-img" src="./products/image 8.png" alt="">
+          <img class="product-img" src="./products/image 26.png" alt="">
       </div>
       <div class="item-block-grid item-block-grid-2">
        ALUMINIUM Window - PT159 Bronze Clear
@@ -336,7 +336,7 @@
      <!-- Swiper -->
 <div class="product-item">
       <div class="item-block-grid item-block-grid-1">
-          <img class="product-img" src="./products/image 9.png" alt="">
+          <img class="product-img" src="./products/image 28.png" alt="">
       </div>
       <div class="item-block-grid item-block-grid-2">
         Halogen Heater - 3 Bar 1200W
@@ -347,7 +347,7 @@
 </div>
 <div class="product-item">
       <div class="item-block-grid item-block-grid-1">
-          <img class="product-img" src="./products/image 10.png" alt="">
+          <img class="product-img" src="./products/image 29.png" alt="">
       </div>
       <div class="item-block-grid item-block-grid-2">
         Heater Wall Bathroom - 2 x 600w
@@ -359,7 +359,7 @@
 
 <div class="product-item">
      <div class="item-block-grid item-block-grid-1">
-         <img class="product-img" src="./products/image 11.png" alt="">
+         <img class="product-img" src="./products/image 30.png" alt="">
      </div>
      <div class="item-block-grid item-block-grid-2">
       ALUMINIUM Window - PTT1512 Bronze Clear
@@ -372,7 +372,7 @@
 
 <div class="product-item">
      <div class="item-block-grid item-block-grid-1">
-         <img class="product-img" src="./products/image 12.png" alt="">
+         <img class="product-img" src="./products/image 31.png" alt="">
      </div>
      <div class="item-block-grid item-block-grid-2">
       DK Gas Cooker Top - Chrome
@@ -388,7 +388,7 @@
   <!-- Swiper -->
 <div class="product-item">
    <div class="item-block-grid item-block-grid-1">
-       <img class="product-img" src="./products/image 13.png" alt="">
+       <img class="product-img" src="./products/image 32.png" alt="">
    </div>
     <div class="item-block-grid item-block-grid-2">
       Dk Gas Parabolic Heater
@@ -400,7 +400,7 @@
 </div>
 <div class="product-item">
   <div class="item-block-grid item-block-grid-1">
-      <img class="product-img" src="./products/image 14.png" alt="">
+      <img class="product-img" src="./products/image 33.png" alt="">
   </div>
   <div class="item-block-grid item-block-grid-2">
     Totai Gas Cylinder - 3kg
@@ -424,7 +424,7 @@
 
 <div class="product-item">
   <div class="item-block-grid item-block-grid-1">
-      <img class="product-img" src="./products/image 17.png" alt="">
+      <img class="product-img" src="./products/image 16.png" alt="">
   </div>
   <div class="item-block-grid item-block-grid-2">
     Battery operated worklight - 600 Lumens
@@ -437,7 +437,7 @@
 <div class="product-row">
   <div class="product-item">
     <div class="item-block-grid item-block-grid-1">
-        <img class="product-img" src="./products/image 14.png" alt="">
+        <img class="product-img" src="./products/image 17.png" alt="">
     </div>
     <div class="item-block-grid item-block-grid-2">
       Total Heat Gun + Nozzles - 2000W
