--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
             <div class="item-block-grid item-block-grid-2">
               Tray set - All in one
             </div>
-            <div class="item-block-grid item-block-grid-3">R139.99 each
+            <div class="item-block-grid item-block-grid-3">R139.99
             </div>
       </div>
       <div class="product-item">
@@ -290,9 +290,9 @@
           <img class="product-img" src="./products/image 23.png" alt="">
       </div>
       <div class="item-block-grid item-block-grid-2">
-        Build it Acr Roof Paint - 20Lt Black
+        Filter Triple Jumbo Kit - 20 inch
       </div>
-      <div class="item-block-grid item-block-grid-3">R999.99
+      <div class="item-block-grid item-block-grid-3">R3999.99
         </div>
 </div>
 <div class="product-item">
@@ -300,9 +300,9 @@
         <img class="product-img reset-height" src="./products/image 24.png" alt="">
       </div>
       <div class="item-block-grid item-block-grid-2">
-        Butane Cartridge - 200g
+        Build it Gloss Enamel - 5lt
       </div>
-      <div class="item-block-grid item-block-grid-3">R64.99
+      <div class="item-block-grid item-block-grid-3">R279.99
         </div>
 </div>
 
@@ -311,9 +311,9 @@
           <img class="product-img" src="./products/image 25.png" alt="">
       </div>
       <div class="item-block-grid item-block-grid-2">
-       ALUMINIUM Window - PT129 Bronze Clear
+        PVC Door Folding - Assorted
       </div>
-      <div class="item-block-grid item-block-grid-3">R849.99
+      <div class="item-block-grid item-block-grid-3">R949.99
         </div>
 </div>
 
@@ -322,10 +322,10 @@
           <img class="product-img" src="./products/image 26.png" alt="">
       </div>
       <div class="item-block-grid item-block-grid-2">
-       ALUMINIUM Window - PT159 Bronze Clear
+       Easylite Bagged - 20kg
       </div>
       <div class="item-block-grid item-block-grid-3">
-        R949.99
+        R189.99
       </div>
 </div>
 
@@ -339,10 +339,10 @@
           <img class="product-img" src="./products/image 28.png" alt="">
       </div>
       <div class="item-block-grid item-block-grid-2">
-        Halogen Heater - 3 Bar 1200W
+        Weld Helmet Auto Dark - Black
       </div>
       <div class="item-block-grid item-block-grid-3">
-        R524.99
+        R399.00
       </div>
 </div>
 <div class="product-item">
@@ -350,10 +350,10 @@
           <img class="product-img" src="./products/image 29.png" alt="">
       </div>
       <div class="item-block-grid item-block-grid-2">
-        Heater Wall Bathroom - 2 x 600w
+        Welder Inverter With Kit - 150A
       </div>
       <div class="item-block-grid item-block-grid-3">
-        R769.99
+        R1999.00
       </div>
 </div>
 
@@ -362,11 +362,11 @@
          <img class="product-img" src="./products/image 30.png" alt="">
      </div>
      <div class="item-block-grid item-block-grid-2">
-      ALUMINIUM Window - PTT1512 Bronze Clear
+     Build it Wonder Surge Plug - FCWP
 
    </div>
    <div class="item-block-grid item-block-grid-3">
-     R1299.99
+     R199.00
    </div>
 </div>
 
@@ -375,11 +375,10 @@
          <img class="product-img" src="./products/image 31.png" alt="">
      </div>
      <div class="item-block-grid item-block-grid-2">
-      DK Gas Cooker Top - Chrome
-
+      Floodlight Solar Kit - 30W LED
    </div>
    <div class="item-block-grid item-block-grid-3">
-     R169.99
+     R549.99
    </div>
 </div>
 </div>
@@ -391,10 +390,10 @@
        <img class="product-img" src="./products/image 32.png" alt="">
    </div>
     <div class="item-block-grid item-block-grid-2">
-      Dk Gas Parabolic Heater
+      Drill Stand For Portable Drlls
      </div>
      <div class="item-block-grid item-block-grid-3">
-      R339.99
+      R799.00
      </div>
 
 </div>
@@ -403,10 +402,10 @@
       <img class="product-img" src="./products/image 33.png" alt="">
   </div>
   <div class="item-block-grid item-block-grid-2">
-    Totai Gas Cylinder - 3kg
+    Angel Grinder Stand - 115mm
   </div>
   <div class="item-block-grid item-block-grid-3">
-    R599.99
+    R699.00
   </div>
 </div>
 
@@ -424,7 +423,7 @@
 
 <div class="product-item">
   <div class="item-block-grid item-block-grid-1">
-      <img class="product-img" src="./products/image 16.png" alt="">
+      <img class="product-img" src="./products/image 37.png" alt="">
   </div>
   <div class="item-block-grid item-block-grid-2">
     Battery operated worklight - 600 Lumens
@@ -437,19 +436,19 @@
 <div class="product-row">
   <div class="product-item">
     <div class="item-block-grid item-block-grid-1">
-        <img class="product-img" src="./products/image 17.png" alt="">
+        <img class="product-img" src="./products/image 6.png" alt="">
     </div>
     <div class="item-block-grid item-block-grid-2">
-      Total Heat Gun + Nozzles - 2000W
+      Butane Cartridge - 200G
     </div>
     <div class="item-block-grid item-block-grid-3">
-      R599.99
+      R64 .99
     </div>
 </div> 
 
 <div class="product-item">
   <div class="item-block-grid item-block-grid-1">
-      <img class="product-img" src="./products/image 25.png" alt="">
+      <img class="product-img" src="./products/image 35.png" alt="">
   </div>
   <div class="item-block-grid item-block-grid-2">
     ALUMINIUM LADDER - WONDER MULTI PURPOSE
@@ -461,7 +460,7 @@
 
 <div class="product-item">
   <div class="item-block-grid item-block-grid-1">
-      <img class="product-img" src="./products/image 26.png" alt="">
+      <img class="product-img" src="./products/image 36.png" alt="">
   </div>
   <div class="item-block-grid item-block-grid-2">
     USB Flashlight - Rechargeable 
